[package]
name = "prettier-rs"
version = "0.0.1"
authors = ["Venkata Ramana <idlike2dream+opensource@gmail.com>"]
license = "MIT"
description = "An ECMAScript parser library."
repository = "https://github.com/vramana/prettier-rs"
exclude = ["tests/esprima/**/*"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
tristate = "0.1.1"
unjson = { version = "0.0.5", path = "crates/unjson" }
joker = { version = "0.0.5", path = "crates/joker" }
easter = { version = "0.0.5", path = "crates/easter" }
estree = { version = "0.0.5", path = "crates/estree" }
esprit = { version = "0.0.5", path = "crates/esprit" }

[[bin]]
bench = false
path = "src/main.rs"
name = "prettier-rs"


[dev-dependencies]
rustc-test = "0.1"
glob = "0.2"

[[test]]
name = "parser-test"
harness = false

[profile.bench]
# It makes little sense to run cross-crate benchmarks w/o lto
# (difference is significant)
lto = true

[[bench]]
name = "parser-bench"
harness = false
test = true

[workspace]
# Implicitly crawled from dependencies.*.path
